<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MahasiswaDetailActivity">
    <ScrollView android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="20dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imgMahasiswaDetail" android:layout_width="125dp" android:layout_height="100dp" android:scaleType="centerCrop" tools:layout_editor_absoluteY="24dp" tools:srcCompat="@tools:sample/avatars"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="15dp" android:layout_marginTop="10dp" android:orientation="vertical">
                    <TextView android:id="@+id/txtNamaLengkap" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="5dp" android:text="@string/nama_lengkap" android:textSize="20sp" android:textStyle="bold"/>
                    <Space android:layout_width="match_parent" android:layout_height="10dp"/>
                    <TextView android:id="@+id/txtNRPDetail" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="NRP"/>
                </LinearLayout>
            </LinearLayout>
            <Spinner android:id="@+id/spinnerMenu" style="@android:style/Widget.Spinner.DropDown" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:backgroundTint="#FFE1E1"/>
            <TextView android:id="@+id/txtDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/description"/>
            <TextView android:id="@+id/labelProgram" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/program" />
            <RadioGroup android:id="@+id/radioProgram" android:layout_width="match_parent" android:layout_height="match_parent">
                <RadioButton android:id="@+id/radioDSAI" android:layout_width="match_parent" android:layout_height="wrap_content" android:editable="false" android:enabled="false" android:text="@string/dsai"
                    tools:ignore="Deprecated" />
                <RadioButton android:id="@+id/radioNCS" android:layout_width="match_parent" android:layout_height="wrap_content" android:editable="false" android:enabled="false" android:text="@string/ncs"
                    tools:ignore="Deprecated" />
                <RadioButton android:id="@+id/radioIMES" android:layout_width="match_parent" android:layout_height="wrap_content" android:enabled="false" android:text="@string/imes"/>
                <RadioButton android:id="@+id/radioDMT" android:layout_width="match_parent" android:layout_height="wrap_content" android:enabled="false" android:text="@string/dmt"/>
                <RadioButton android:id="@+id/radioGD" android:layout_width="match_parent" android:layout_height="wrap_content" android:enabled="false" android:text="@string/gd"/>
            </RadioGroup>
            <Button android:id="@+id/btnReqFriend" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="end" android:layout_marginTop="25dp" android:backgroundTint="#ED7D7D" android:text="@string/request_friend" android:textColorLink="#F46F6F"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>